2017-12-21 master
- Fixes:
  - Merged patches and fixed other warnings on OpenBSD

2017-12-20 16.0
- Fixes:
  - Taskbar: `taskbar_distribute_size = 1` now playes well with `task_align = center` and
    `task_align = right` (issue #688)
- Enhancements:
  - Added Spanish translation (contributed by Vicmz)
  - Executor: updated tooltip documentation (issue #676)
  - Systray: warn on duplicate config option systray_name_filter (issue #652)
  - Taskbar: thumbnail support in tooltips
  - Use C11 if possible to support generic printing for unit tests (should fall back to C99)

2017-11-05 15.3
- Fixes:
  - Launcher: Reset signal mask before executing commands (issue #674)
  - cmake: Do not hardcode path to /etc

2017-10-01 15.2
- Fixes:
  - Battery info is now again displayed even when current sensor is missing (https://github.com/jmc-88/tint3/issues/34)
  - Text elements compute their size correctly (issue #671)
  - Window order persists on panel restart (issue #615)

2017-09-08 15.1
- Fixes:
  - Fixed build on non-Linux and non-x86 systems

2017-09-02 15.0
- Fixes:
  - Clock, executors and other timers fire correctly after waking up from suspend
  - One-shot timers are restarted correctly from their own callbacks
  - Clock is refreshed with better accuracy (thanks @aaaz)
  - Panel: by popular demand, the old struts behavior with autohide has been restored (issue #619);
    if you encounter applications that interact poorly with it,
	you might have better luck with strut_policy = minimum,
	if that does not work, you will have to turn off autohide.
- Enhancements:
  - Panel:
    - _NET_WM_PID is set correctly, so now tint2 can be interacted with more easily from wmctrl and similar apps
  - Taskbar: new config option taskbar_hide_different_desktop
  - Battery:
    - New config option bat1_format and bat2_format
	- New config option battery_full_cmd
	- Better "Unknown" state handling
  - Executor:
    - Hide if output is empty